syntax = "proto3";

package xai.v1;

option go_package = "github.com/ZaguanLabs/xai-sdk-go/proto/gen/go/xai/v1;xaiv1";

// Collections service for document collections
service Collections {
  // List collections
  rpc ListCollections(ListCollectionsRequest) returns (ListCollectionsResponse);

  // Get collection information
  rpc GetCollection(GetCollectionRequest) returns (Collection);

  // Create a new collection
  rpc CreateCollection(CreateCollectionRequest) returns (Collection);

  // Delete a collection
  rpc DeleteCollection(DeleteCollectionRequest) returns (DeleteCollectionResponse);

  // List documents in a collection
  rpc ListDocuments(ListDocumentsRequest) returns (ListDocumentsResponse);

  // Get a document
  rpc GetDocument(GetDocumentRequest) returns (Document);

  // Add a document to a collection
  rpc AddDocument(AddDocumentRequest) returns (Document);

  // Delete a document from a collection
  rpc DeleteDocument(DeleteDocumentRequest) returns (DeleteDocumentResponse);
}

// Collection information
message Collection {
  string id = 1;
  string name = 2;
  string description = 3;
  int64 created_at = 4;
  int64 updated_at = 5;
  int32 document_count = 6;
  int64 total_size = 7;
}

// List collections request
message ListCollectionsRequest {
  string purpose = 1;
  int32 limit = 2;
  string sort_by = 3;
  string sort_order = 4;
}

// List collections response
message ListCollectionsResponse {
  repeated Collection collections = 1;
}

// Get collection request
message GetCollectionRequest {
  string collection_id = 1;
}

// Create collection request
message CreateCollectionRequest {
  string name = 1;
  string description = 2;
  bool encrypted = 3;
}

// Delete collection request
message DeleteCollectionRequest {
  string collection_id = 1;
}

// Delete collection response
message DeleteCollectionResponse {
  bool success = 1;
}

// Document information
message Document {
  string id = 1;
  string collection_id = 2;
  string title = 3;
  string content = 4;
  string content_type = 5;
  int64 size = 6;
  int64 created_at = 7;
  int64 updated_at = 8;
}

// List documents request
message ListDocumentsRequest {
  string collection_id = 1;
  int32 limit = 2;
  string sort_by = 3;
  string sort_order = 4;
}

// List documents response
message ListDocumentsResponse {
  repeated Document documents = 1;
}

// Get document request
message GetDocumentRequest {
  string document_id = 1;
  string collection_id = 2;
}

// Add document request
message AddDocumentRequest {
  string collection_id = 1;
  string title = 2;
  string content = 3;
  string content_type = 4;
}

// Delete document request
message DeleteDocumentRequest {
  string document_id = 1;
  string collection_id = 2;
}

// Delete document response
message DeleteDocumentResponse {
  bool success = 1;
}